syntax = "proto3";

import "google/protobuf/timestamp.proto";

package authService;

option go_package = ".;authService";
import "google/api/annotations.proto";

message User {
    string ID = 1;
    string FirstName = 2;
    string LastName = 3;
    string Email = 4;
    string Password = 5;
    string Role = 6;
    google.protobuf.Timestamp CreatedAt = 7;
    google.protobuf.Timestamp UpdatedAt = 8;
}

message CreateUserRequest {
    string FirstName = 1;
    string LastName = 2;
    string Email = 3;
    string Password = 4;
    string Role = 5;
}

message CreateUserResponse {
    User user = 1;
}

message GetByIDResponse {
    User user = 1;
}

message GetByIDRequest {
    string userID = 1;
}

message GetByEmailRequest {
    string email = 1;
}

message GetByEmailResponse {
    User user = 1;
}


service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
    }
    rpc GetUserByID (GetByIDRequest) returns (GetByIDResponse) {
        option (google.api.http) = {
            get: "/v1/get_user"
        };
    }

    rpc GetUserEmail (GetByEmailRequest) returns (GetByEmailResponse) {
        option (google.api.http) = {
            get: "/v1/get_email"
        };
    }
}